EcmaScript behavior.

New Features in 3.4.1:
======================
* JEXL-428:     Make Comparable object high priority while comparing
* JEXL-427:     Avoid coercing logical expressions to boolean
* JEXL-426:     Enable pass-by-reference for Captured Variables

Bugs Fixed in 3.4.1:
====================
* JEXL-435:     Changed behavior of empty operator overloading
* JEXL-434:     The safe-access array operator is not safe
* JEXL-433:     Debugger does not accept empty return statement
* JEXL-432:     Namespace functors are not cleared when the classloader is updated
* JEXL-431:     Parse error with variables declared in a catch clause
* JEXL-429:     Ternary expression regression
* JEXL-425:     Multiline format literals does not always return string

Changes in 3.4.1:
=================
o               Replace NumberParser use of Locale.ENGLISH with Locale.ROOT
o               Bump org.apache.commons:commons-parent from 71 to 78
o               Bump commons-logging:commons-logging from 1.3.2 to 1.3.4
o               Bump org.codehaus.mojo:animal-sniffer-maven-plugin from 1.23 to 1.24
o               Bump org.apache.commons:commons-lang3 from 3.14.0 to 3.17.0
o               Bump org.hamcrest:hamcrest from 2.2 to 3.0
o               Bump org.ow2.asm:asm from 9.7 to 9.7.1

========================================================================================================================
Release 3.4
========================================================================================================================

Version 3.4 is a minor release.

Compatibility with previous releases
====================================
Version 3.4 is source and binary compatible with 3.3.


What's new in 3.4:
==================
Features and permissions are easier to define through new methods.
Some new syntaxes are introduced (thus the new minor); try/catch/finally (including with resources),